--- a/index.html
+++ b/index.html
@@ -49,10 +49,7 @@
     <div id="bottom">
       <p>Let's Keep In Touch !</p>
       </div>
-      <form action=/>
-      <input type="text" placeholder=" Your e-mail Goes Here :) ">
-      <button type="submit" class="btn btn-success">GO!</button>
-    </form>
+    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfECSPrY0q3RjigGFj8K3KH6ajYT9WtHUKe7AGcfkI83ZtF5w/viewform?embedded=true" width="640" height="1016" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
     </div>
 </div>
     <script src="map.js"></script>
