--- a/index.html
+++ b/index.html
@@ -16,35 +16,21 @@
       <h2>The freelance savior</h2>
     </div>
     <div class="container">
-      <p><a href="about.html">About</a></p>
+      <p><a href="About.html">About</a></p>
       <h3>Find a place to work from:</h3>
     </div>
-
     <div id="map"></div>
-
-    <div class="container">
-      <div id="area">
-        <ul><li>North London</li>
-          <li>East London</li>
-          <li>West London</li>
-          <li>South London</li>
-        </div>
+    <div class= "container">
+    <p><a href="Areas.html">List of places by Areas</a></p>
+    </div>
       </div>
-
-      <!-- click on any of them and u will be redirected to the page of the right area
-      with this info about each place:
-      <li>free wifi</li>
-      <li>wifi speed?</li>
-      <li>noisy</li>
-      <li>amount of electrical sockets</li>
-      <li>time limit</li>
-      <li></li></ul>
 
       <!-- after entering your post code there will be a map showing all the places you can work from,
       when clicking on any of the place you will be shown details about the place
       name of the place, address, phone num,link to their website,
       busiest hours, time limit, amount of electrical sockets,
       how noisy is the place (user based rating 1-10), are the people talkative, nearest public transport-->
+
       <div class="container">
         <div id="bottom">
           <p>Let's Keep In Touch !</p>
