links for north

--- a/Areas.html
+++ b/Areas.html
@@ -15,14 +15,14 @@
        <div class="areas">
          <ul><li>North London</li>
          </div>
-         <div class="places">
-        <p>Cable & co. - good coffee,</br>
-           Minkies deli - good coffee, beautiful place,</br>
-           Gracelands - friencly staff, cute place, quiet,</br>
-           Bijou London - acrross willsden green station, outdoor sitting,</br>
-           Nest Cafe - not the best place to work from but great location fot tube,</br>
-           The British Library - different style,</br>
-           Ginger & White London</br>
+         <div class="places">    <!--put links for places!-->
+        <p><a href=" http://cableco.london/">Cable & co.</a> - good coffee,</br>
+           <a href=" https://www.minkiesdeli.co.uk/">Minkies Deli </a> - good coffee,- good coffee, beautiful place,</br>
+          <a href=" http://www.gracelandscafe.com/">Gracelands</a> - good coffee,- friencly staff, cute place, quiet,</br>
+            <a href=" https://www.google.co.uk/search?q=bijou%20london&oq=Bijou+London&aqs=chrome.0.0j69i60l3j0l2.513j0j4&sourceid=chrome&ie=UTF-8&npsic=0&rflfq=1&rlha=0&rllag=51527200,-174161,6513&tbm=lcl&rldimm=3041445847200358835&ved=2ahUKEwj3kZz3zIPfAhVQNOwKHXS-DQoQvS4wAHoECAEQLA&rldoc=1&tbs=lrf:!2m4!1e17!4m2!17m1!1e2!2m1!1e2!2m1!1e3!2m1!1e16!3sIAE,lf:1,lf_ui:2#rlfi=hd:;si:3041445847200358835;mv:!1m2!1d51.733176099999994!2d0.0610779!2m2!1d51.432117899999994!2d-0.6606289">Bijou London</a> - Good coffee, acrross willsden green station, outdoor sitting,</br>
+           <a href=" http://nestdeli.com/">Nest Cafe</a> - Good coffee, not the best place to work from but great location fot tube,</br>
+            <a href=" https://www.bl.uk/visit/eat-drink-shop"> The British Library Cafe</a> - good coffee, different style,</br>
+           <a href=" http://www.gingerandwhite.com/">Ginger & White</a> - Good coffee,</br>
          </p>
        </div>
          <div class="areas">
