tried to fix something. thought it had to do with name

--- a/Areas.html
+++ b/Areas.html
@@ -29,21 +29,22 @@
            <li>East London</li>
             </div>
            <div class="places">
-           <p>Google for Startups Campus,</p>
+           <a href=" https://www.campus.co/"> - Google for Startups Campus</a> Great place to work from,</br>
          </div>
 
            <div class="areas">
            <li>West London</li>
                 </div>
             <div class="places">
-           <p>Java U,</br>
-           Chief coffee,</p>
+           <a href=" https://www.instagram.com/javaupaddington/"> - Java U </a></br>
+          <a href=" http://www.chief-coffee.com/"> - Chief Coffee</a></br></p>
          </div>
 
           <div class="areas">
            <li>South London</li>
          </div>
          <div class="places">
+           <a href=" https://www.campus.co/"> - Google for Startups Campus</a> find a place in the east!!</br>
          </div>
          </div>
          <!-- click on any of them and u will be redirected to the page of the right area
