--- a/Areas.html
+++ b/Areas.html
@@ -44,7 +44,8 @@
            <li>South London</li>
          </div>
          <div class="places">
-           <a href=" https://www.campus.co/"> - Google for Startups Campus</a> find a place in the east!!</br>
+           <a href=" https://coffeeworksproject.com/"> - The CoffeeWorks Project - multiple locations, </a> </br>
+            <a href=" http://www.brickwoodlondon.com/"> - Brickwood London, </a> </br>
          </div>
          </div>
          <!-- click on any of them and u will be redirected to the page of the right area
