multiple markers and infowindow

--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
     </div>
     <div class="container">
       <p><a href="About.html">About</a></p>
-      <h3>Click on the map to find a place to work from:</h3>
+      <h4>Click on the map to find a place to work from:</h4>
     </div>
     <div id="map"></div>
     <div class= "container">
-      <div id= "list-of-areas">
+      <div id= "list-of-places-by-areas">
     <p><a href="Areas.html">List of places by Areas</a></p>
   </div>
     </div>
