added more info to places

--- a/index.html
+++ b/index.html
@@ -22,25 +22,29 @@
     <div id="map"></div>
     <div class= "container">
       <div id= "list-of-places-by-areas">
-    <p><a href="Areas.html">List of places by Areas</a></p>
+        <p><a href="Areas.html">List of places by Areas</a></p>
+      </div>
+    </div>
   </div>
-    </div>
-      </div>
 
-      <!-- after entering your post code there will be a map showing all the places you can work from,
-      when clicking on any of the place you will be shown details about the place
-      name of the place, address, phone num,link to their website,
-      busiest hours, time limit, amount of electrical sockets,
-      how noisy is the place (user based rating 1-10), are the people talkative, nearest public transport-->
+  <!--
+  /*when clicking on any of the place you will be shown details about the place
+  name of the place, address, phone num,link to their website,
+  busiest hours, time limit, amount of electrical sockets,
+  how noisy is the place (user based rating 1-10), are the people talkative...*/!-->
 
-      <div class="container">
-        <div id="bottom">
-          <p>Let's Keep In Touch !</p>
-        </div>
-        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfECSPrY0q3RjigGFj8K3KH6ajYT9WtHUKe7AGcfkI83ZtF5w/viewform?embedded=true" width="640" height="1016" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
-      </div>
+  <div class="container">
+    <div id="bottom">
+      <p>Let's Keep In Touch !</p>
+        <h4>Please let me know if you have more info to add to this site!</h4>
     </div>
-    <script src="map.js"></script>
-    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDs075nPwRsG7WC1HeXd7VsRpWMFZvs8Us&callback=initMap"></script>
-  </body>
-  </html>
+  </div>
+  <div id="form">
+    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfECSPrY0q3RjigGFj8K3KH6ajYT9WtHUKe7AGcfkI83ZtF5w/viewform?embedded=true" width="640" height="1016" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+  </div>
+
+</div>
+<script src="map.js"></script>
+<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDs075nPwRsG7WC1HeXd7VsRpWMFZvs8Us&callback=initMap"></script>
+</body>
+</html>
