--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" type="text/css" href="final project.css">
   <link href='https://fonts.googleapis.com/css?family=Architects Daughter' rel='stylesheet'>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <style>
   </style>
 </head>
@@ -15,8 +16,11 @@
     <a href="Home" class="active">Home</a>
     <a href="Areas.html">Areas</a>
     <a href="About.html">About</a>
-    <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-      <i class="fa fa-bars"></i>
+    <a href="javascript:void(0);" class="icon" onclick="myFunction()"></a>
+    <div class= "fb">
+    <a href="https://www.facebook.com/codefirstgirls/" class="fa fa-facebook"></a>
+    </div>
+      <!--<i class="fa fa-bars"></i> 3lines icon!-->
     </a>
   </div>
   <div class="container fluid">
@@ -50,13 +54,16 @@
   <div id="form">
     <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfECSPrY0q3RjigGFj8K3KH6ajYT9WtHUKe7AGcfkI83ZtF5w/viewform?embedded=true" width="640" height="1016" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
   </div>
-
+<div class="cat"><img src="cat wink.gif">
+</div>
+<div class="footer">
+  <p>Made for final project <img src="cfg_logo.png" ></p>
 </div>
 <script src="map.js"></script>
 <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDs075nPwRsG7WC1HeXd7VsRpWMFZvs8Us&callback=initMap"></script>
-<script src="js/jquery-3.2.1.min.js"></script>
+<!--<script src="js/jquery-3.2.1.min.js"></script>!-->s
 <script src="http://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-<script src="js/bootstrap.min.js"></script>
+<!--<script src="js/bootstrap.min.js"></script>!-->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 </body>
 </html>
