--- a/index.html
+++ b/index.html
@@ -24,8 +24,9 @@
     </a>
   </div>
   <div class="container fluid">
-    <div>
+    <div class="welcome">
       <h1>Welcome to Work Out!</h1>
+    </div>
       <h2>The freelance savior</h2>
     </div>
     <div class="container">
@@ -61,9 +62,9 @@
 </div>
 <script src="map.js"></script>
 <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDs075nPwRsG7WC1HeXd7VsRpWMFZvs8Us&callback=initMap"></script>
-<!--<script src="js/jquery-3.2.1.min.js"></script>!-->s
+<script src="js/jquery-3.2.1.min.js"></script>
 <script src="http://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-<!--<script src="js/bootstrap.min.js"></script>!-->
+<script src="js/bootstrap.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 </body>
 </html>
