trying to find my page..

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <div class="topnav" id="myTopnav">
     <a href="Home" class="active">Home</a>
     <a href="Areas.html">Areas</a>
-    <a href="About.html">About</a>
+    <a href="about.html">About</a>
     <a href="javascript:void(0);" class="icon" onclick="myFunction()"></a>
     <div class= "fb">
     <a href="https://www.facebook.com/codefirstgirls/" class="fa fa-facebook"></a>
