fixed cat and form

--- a/index.html
+++ b/index.html
@@ -52,10 +52,10 @@
       <h4>Please let me know if you have more info to add to this site!</h4>
     </div>
   </div>
-  <div id="form">
-    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfECSPrY0q3RjigGFj8K3KH6ajYT9WtHUKe7AGcfkI83ZtF5w/viewform?embedded=true" width="640" height="1016" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
-  </div>
-<div class="cat"><img src="cat wink.gif">
+
+    <iframe class="form" src="https://docs.google.com/forms/d/e/1FAIpQLSfECSPrY0q3RjigGFj8K3KH6ajYT9WtHUKe7AGcfkI83ZtF5w/viewform?embedded=true" width="640" height="1016" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+
+<div><img class="cat" src="cat wink.gif">
 </div>
 <div class="footer">
   <p>Made for final project <img src="cfg_logo.png" ></p>
