div click on map

--- a/index.html
+++ b/index.html
@@ -27,7 +27,10 @@
       <h1>Welcome to Work Out!</h1>
     </div>
       <h2>The freelance savior</h2>
+      <div class="click-on-map">
       <h4>Click on the map to find a place to work from:</h4>
+      </div>
+      </div>
     <div id="map"></div>
       <div id= "list-of-places-by-areas">
         <p><a href="Areas.html">List of places by Areas</a></p>
