--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
   <div class="container fluid">
     <p>I moved to London in August 2018, as a freelancer and entrepreneur i needed to find a place to work from.<br/>
       To my surprise i couldn't find all the information i needed in one place and had to search the web for diffrent sites and sum up the information myself.<br/>
-      In every site i had to scroll down to find the right information and in many casescI had to look for the location of the places seperatly because most of the sites just state the addrress without giving a link to a map or stating in wich part of the city the place is.<br/>
+      In every site i had to scroll down to find the right information and in many cases I had to look for the location of the places seperatly because most of the sites just state the addrress without giving a link to a map or stating in wich part of the city the place is.<br/>
       On top of that, a few places i went to were packed with people, had a surprise time limit or not work friendly at all..<br/>
       You get the picture...  <br/>
       It was such a waste of time and effort that i decided to try and create a site that would make make others lives easier. <br/>
