updated new places in areas list

--- a/Areas.html
+++ b/Areas.html
@@ -26,6 +26,8 @@
         <a href=" http://nestdeli.com/"> - Nest Cafe</a> - Good coffee, not the best place to work from but great location fot tube,</br>
         <a href=" https://www.bl.uk/visit/eat-drink-shop"> - The British Library Cafe</a> - good coffee, different style,</br>
         <a href=" http://www.gingerandwhite.com/"> - Ginger & White</a> - Good coffee,</br>
+        <a href=" http://bonjourbriochecafe.co.uk/"> - Bonjour Brioche Cafe</a> - Lovely place with good food and pastries, prices range:8-13£,</br>
+        <a href=" http://mapstudiocafe.com/"> - Map Studio Cafe</a> - Lovely place, great atmosphere, good strong coffee,</br>
       </div>
       <div class="areas">
         <li>East London</li>
